# nomi

./: .cursorrules  .gitignore  MOCK_USER_IMPROVEMENTS_SUMMARY.md  PRODUCT_REQUIREMENTS.md  QUICK_REFERENCE.md  README.md  RESPONSE_EXAMPLES.md
backend/: .gitignore  .railwayignore  Dockerfile  GENERATING_AVATARS.md  HUMAN_LIKE_AI_IMPROVEMENTS.md  Procfile  env.example  generate_new_user_avatars.sh  pyproject.toml  railway.toml  regenerate_new_users.sh  render.yaml  requirements.txt  run_server.py  start.sh
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/matching/: admin.py  ai_service.py  algorithm.py  apps.py  models.py  serializers.py  support.py  test_human_responses.py  tests.py  urls.py  views.py
backend/matching/migrations/: 0001_initial.py  0002_initial.py  0003_add_compatibility_breakdown.py  0004_shortcut_response.py  0005_shortcut_response_custom.py  0006_message_transcript.py  0007_message_audio_url_charfield.py  0008_add_message_image.py
backend/profiles/: admin.py  apps.py  enums.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py  0002_initial.py  0003_profile_date_of_birth_profile_gender_and_more.py  0004_add_time_preferences_and_ask_me.py  0005_fix_mock_user_preferences.py  0006_unify_gender_values.py  0007_add_url_to_profilephoto.py  0008_tag_visibility_and_intent.py  0009_remove_relationship_types.py  0010_remove_profile_date_pace.py  0011_remove_profile_openness_tags.py  0012_add_custom_interests.py
backend/users/: admin.py  apps.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_is_onboarded.py  0003_change_default_language_to_hebrew.py  0004_add_invitation_model.py
frontend/: .env  (+11 more)
(+158 files in other folders)
