[project]
name = "nomi-backend"
version = "0.1.0"
description = "Backend API for Nomi dating app"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.11"
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Django-specific settings
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

# Ignore missing imports for third-party packages without stubs
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "social_django.*",
    "social_core.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*.py" = ["E501"]

[tool.ruff.isort]
known-first-party = ["users", "profiles", "matching", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
